# reagent

./: .env.template  .gitignore  .golangci.yml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  action.yml  docker-compose.yml  go.mod  go.sum  mkdocs.yml  opencode.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-intelligence-agent.md  code-reviewer.md  code-simplifier.md  demo.md  go-backend.md  literature-reviewer.md  methodology-critic.md  prior-art-searcher.md  python-backend.md  react-dashboard.md
.claude/commands/: commit.md  review.md  test.md
.claude/skills/: architecture.md  frontend.md  python-standards.md  react-typescript.md  testing.md
.claude/skills/define-methodology/: SKILL.md
.claude/skills/lit-search/: SKILL.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  docs.yml  release.yml
.opencode/agents/: code-intelligence-agent.md  code-simplifier.md  go-backend.md  literature-reviewer.md  methodology-critic.md  prior-art-searcher.md
.opencode/commands/: commit.md  review.md  test.md
.opencode/skills/architecture/: SKILL.md
.opencode/skills/define-methodology/: SKILL.md
.opencode/skills/gitnexus-cli/: SKILL.md
.opencode/skills/gitnexus-debugging/: SKILL.md
.opencode/skills/gitnexus-exploring/: SKILL.md
.opencode/skills/gitnexus-guide/: SKILL.md
.opencode/skills/gitnexus-impact-analysis/: SKILL.md
.opencode/skills/gitnexus-refactoring/: SKILL.md
.opencode/skills/lit-search/: SKILL.md
.opencode/skills/testing/: SKILL.md
cmd/dtguard/: main.go
dashboard/: .prettierrc  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/: ActionButton.tsx  AssetCard.tsx  ConfirmDialog.tsx  CostChart.tsx  EmptyState.tsx  ErrorMessage.tsx  GradeBadge.tsx  LoadingSpinner.tsx  Modal.tsx  ScoreChart.tsx  Sidebar.tsx  StatusBadge.tsx  Toast.tsx
dashboard/src/hooks/: useAssets.ts  useCosts.ts  useEvaluations.ts  useInstincts.ts  useLoops.ts  useProviders.ts  useTheme.ts
dashboard/src/pages/: AssetDetail.tsx  AssetOverview.tsx  CostMonitor.tsx  EvalTrends.tsx  InstinctStore.tsx  LoopControl.tsx  ProviderConfig.tsx
docs/: README.md  architecture.md  asset-creation.md  attestation.md  ci-integration.md  cli-reference.md  comparison.md  configuration.md  dashboard.md  demo-runbook.md  dt-integration.md  evaluation.md  getting-started.md  index.md  security-scanning.md  security.md  shield.md  threat-model.md
examples/: github-workflow.yml
internal/auth/: auth.go
internal/cli/: apply.go  commands.go  commands_test.go  delete.go  describe.go  get.go  root.go
internal/dt/: client.go  client_test.go
internal/output/: output.go
internal/resources/: asset.go  attestation.go  decode.go  finding.go  floor.go  proposal.go  provenance.go  registry.go  registry_test.go  revocation.go  types.go
internal/safety/: safety.go
internal/signing/: payload.go  payload_test.go
internal/storage/: db.go  db_test.go
internal/storage/migrations/: v1.sql
internal/version/: version.go
scripts/: docs_hooks.py  seed_cost_data.py
src/agentguard/: _tuning.py  config.py
src/agentguard/attestation/: __init__.py  counterfactual.py  divergence.py  divergence_store.py  fingerprint.py  models.py  store.py
src/agentguard/ci/: __init__.py  drift.py  reporter.py  runner.py
src/agentguard/cli/: __init__.py  _helpers.py
src/agentguard/core/: __init__.py  catalog.py  inventory.py
src/agentguard/evaluation/: __init__.py  evaluator.py  suggest.py
src/agentguard/harness/: __init__.py  adapters.py  agents_md.py  detection.py
src/agentguard/intelligence/: __init__.py  analyzer.py  patterns.py  schema_validator.py
src/agentguard/llm/: __init__.py  cache.py  config.py  instincts.py  parser.py  prompt_loader.py  prompts.py  providers.py  quality.py  router.py
src/agentguard/sandbox/: __init__.py  capture.py  corpus.py  drivers.py  engine.py
src/agentguard/security/: __init__.py  agentshield.py  gate.py  governance.py  importer.py  scanner.py  snapshots.py  trust.py
src/agentguard/shield/: __init__.py  enforcer.py  policy.py
src/agentguard/storage/: __init__.py  schema.sql
src/agentguard/telemetry/: __init__.py  events.py  hlot.py  profiler.py
src/reagent/: _tuning.py  config.py
src/reagent/api/: __init__.py  __main__.py  app.py  db.py  models.py  routes.py  sse.py
src/reagent/attestation/: __init__.py  counterfactual.py  divergence.py  (+4 more)
tests/: conftest.py  test_ab_testing.py  test_agentguard_e2e.py  test_analyzer.py  test_attestation_fingerprint.py  test_catalog.py  test_ci.py  test_cli.py  test_counterfactual.py  test_creator.py  test_dashboard_api.py  test_divergence.py  test_e2e.py  test_evaluator.py  test_generation.py  test_harness.py  test_hlot.py  test_hooks.py  test_importer.py  test_instincts.py  test_inventory.py  test_loops.py  test_parsers.py  test_patterns.py  test_profiler.py  test_providers.py  test_regression.py  test_sandbox_engine.py  test_schemas.py  test_security.py  test_security_gate.py  test_security_taxonomy.py  test_shield_policy.py  test_snapshots.py  test_specializer.py  test_storage.py  test_suggest.py  test_telemetry.py  test_trust.py  test_tuning.py
(+144 files in other folders)
