[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard"
version = "0.1.0"
description = "Behavioral attestation and runtime shield for AI agent configuration assets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "calghar" },
]
keywords = ["claude-code", "ai-agents", "devtools", "security", "quality-gate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "jsonschema>=4.20",
    "cryptography>=42",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[project.scripts]
agentguard = "agentguard.cli:main"

[project.urls]
Homepage = "https://github.com/calghar/agentguard"
Documentation = "https://calghar.github.io/agentguard"
Repository = "https://github.com/calghar/agentguard"
Issues = "https://github.com/calghar/agentguard/issues"
Changelog = "https://github.com/calghar/agentguard/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agentguard"]

[tool.hatch.build.targets.wheel.force-include]
"src/agentguard/data" = "agentguard/data"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PTH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B110", "B311", "B404", "B603", "B607", "B608"]

[tool.coverage.run]
source = ["agentguard"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
